--- a/indexStyle.css
+++ b/indexStyle.css
@@ -26,6 +26,7 @@ section {
     position: relative;
     width: 100%;
     height: 100vh;
+    z-index: -999;
 }
 
 body {
@@ -183,7 +184,7 @@ section p {
     padding: 10px 0px;
 }
 
-.exploreContent {
+.explore-content {
     position: absolute;
     background-color: #1e88e5;
     top: -20%;
@@ -205,10 +206,11 @@ section p {
     padding: 20px;
     color: #d9d9d9;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
 }
 
 @media only screen and (max-width: 768px) {
-    .exploreContent {
+    .explore-content {
         width: 55%;
         height: 65%;
         top: 15vh;
